--- a/src/assets/css/components/feedbacks.scss
+++ b/src/assets/css/components/feedbacks.scss
@@ -161,6 +161,7 @@
 }
 .c-feedbacks__pagination {
     margin: 30px auto;
+    transform: none !important;
 
     .swiper-pagination-bullet-active {
         background: #4BA83B;
