--- a/src/assets/css/components/lang.scss
+++ b/src/assets/css/components/lang.scss
@@ -17,6 +17,6 @@
         }
     }
     .c-lang__current {
-        color: #239F0F;
+        color: $color-green;
     }
 }
