--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -47,7 +47,7 @@
     padding: 0 40px;
     border: 0;
     border-radius: 4px;
-    background: $color-btn-bg;
+    background: $color-green;
     font-size: toRem(14);
     line-height: 1;
     color: #fff;
@@ -57,7 +57,7 @@
     transition: background .3s;
 
     &:hover {
-        background: $color-btn-bg-over;
+        background: rgba($color-green, .8);
     }
 
     @include Tablet {
@@ -82,7 +82,7 @@
     margin: 20px 0;
     font-size: toRem(14);
     font-weight: 500;
-    color: #239F0F;
+    color: $color-green;
     letter-spacing: 3px;
     text-transform: uppercase;
 
